apparently I made some changes and did not commit before switching projects

--- a/styles/main.css
+++ b/styles/main.css
@@ -27,3 +27,9 @@ fieldset {
 	display: flex;
 	flex-direction: column;
 }
+
+.journalEntry {
+	border: solid black 1px;
+	border-radius: 3%;
+	background-color: bisque;
+}
