--- a/styles/main.css
+++ b/styles/main.css
@@ -1,21 +1,17 @@
 @import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
-
 /*Typography
 --------------------------------------------------------------*/
-body,
-button,
-input,
-select,
-textarea {
+
+body, button, input, select, textarea {
 	color: #404040;
 	font-family: "Comfortaa", Arial, sans-serif;
 	font-size: 14px;
 	line-height: 1.5;
 }
 
-h1,h2,h3,h4,h5,h6 {
-  font-family: "Patua One", serif;
-  letter-spacing: 2px;
+h1, h2, h3, h4, h5, h6 {
+	font-family: "Patua One", serif;
+	letter-spacing: 2px;
 }
 
 form {
@@ -32,4 +28,12 @@ fieldset {
 	border: solid black 1px;
 	border-radius: 3%;
 	background-color: bisque;
+}
+
+#saveJournalEntry {
+	margin: 5px;
+}
+
+.journalEntry {
+	margin: 10px;
 }
